WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59380
Fix OwnPtr strict errors in TransformState.cpp
https://bugs.webkit.org/show_bug.cgi?id=59380
Summary
Fix OwnPtr strict errors in TransformState.cpp
Kenneth Russell
Reported
2011-04-25 16:11:41 PDT
Fix OwnPtr strict errors in TransformState.cpp
Attachments
Patch
(1.89 KB, patch)
2011-04-25 16:20 PDT
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2011-04-25 16:20:14 PDT
Created
attachment 90996
[details]
Patch
Adam Barth
Comment 2
2011-04-25 17:11:15 PDT
Comment on
attachment 90996
[details]
Patch Clearing flags on attachment: 90996 Committed
r84853
: <
http://trac.webkit.org/changeset/84853
>
Adam Barth
Comment 3
2011-04-25 17:11:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug