2011-04-25  Kenneth Russell  <kbr@google.com>

Reviewed by David Levin.

        Fix OwnPtr strict errors in TransformState.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59380

        * rendering/TransformState.cpp:
        (WebCore::TransformState::applyTransform):


Canonical link: https://commits.webkit.org/74580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84853 268f45cc-cd09-0410-ab3c-d52691b4dbfc